# causal-economist

./: .env.example  .gitignore  PREREGISTRATION.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py  verify_economist_llm.py
causal_mas/: agents.py  backend.py  cli.py  datasets.py  graph.py  llm.py  planner.py  reviewer.py  schema.py  state.py
eval/: analyze.py  arms.py  metrics.py  run_eval.py  tasks.py
evals/: MODEL_COMPARISON.md
